<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.onix.internship.infinity.exit.ExitViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/text_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/text_question"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:clipToPadding="true"
            android:dividerPadding="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:showDividers="middle"
            app:flow_horizontalAlign="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_question"
            app:layout_constraintStart_toStartOf="@+id/text_question"
            app:layout_constraintTop_toBottomOf="@+id/text_question">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/yes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.onClickButtonYes()}"
                android:text="@string/yes" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/no_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="@{() -> viewModel.onClickButtonNo()}"
                android:layout_weight="1"
                android:text="@string/no" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>